8235962: os::current_thread_id() is not signal safe on macOS

Use mach_thread_self instead of pthread_mach_thread_np

Reviewed-by: dholmes, cjplummer